--- a/01_loading_data_and_visualizations.ipynb
+++ b/01_loading_data_and_visualizations.ipynb
@@ -360,6 +360,285 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### raw.pip? \n",
+    "- the '?' is not a python code but a feature of jupyter notebook that pulls out the documentation of the code and shows it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[0;31mSignature:\u001b[0m\n",
+      "\u001b[0mraw\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpipe\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;34m\u001b[0m    \u001b[0mfunc\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'Callable[..., T] | tuple[Callable[..., T], str]'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;34m\u001b[0m    \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;34m\u001b[0m    \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;34m\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0;34m'T'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mDocstring:\u001b[0m\n",
+      "Apply chainable functions that expect Series or DataFrames.\n",
+      "\n",
+      "Parameters\n",
+      "----------\n",
+      "func : function\n",
+      "    Function to apply to the Series/DataFrame.\n",
+      "    ``args``, and ``kwargs`` are passed into ``func``.\n",
+      "    Alternatively a ``(callable, data_keyword)`` tuple where\n",
+      "    ``data_keyword`` is a string indicating the keyword of\n",
+      "    ``callable`` that expects the Series/DataFrame.\n",
+      "args : iterable, optional\n",
+      "    Positional arguments passed into ``func``.\n",
+      "kwargs : mapping, optional\n",
+      "    A dictionary of keyword arguments passed into ``func``.\n",
+      "\n",
+      "Returns\n",
+      "-------\n",
+      "the return type of ``func``.\n",
+      "\n",
+      "See Also\n",
+      "--------\n",
+      "DataFrame.apply : Apply a function along input axis of DataFrame.\n",
+      "DataFrame.applymap : Apply a function elementwise on a whole DataFrame.\n",
+      "Series.map : Apply a mapping correspondence on a\n",
+      "    :class:`~pandas.Series`.\n",
+      "\n",
+      "Notes\n",
+      "-----\n",
+      "Use ``.pipe`` when chaining together functions that expect\n",
+      "Series, DataFrames or GroupBy objects. Instead of writing\n",
+      "\n",
+      ">>> func(g(h(df), arg1=a), arg2=b, arg3=c)  # doctest: +SKIP\n",
+      "\n",
+      "You can write\n",
+      "\n",
+      ">>> (df.pipe(h)\n",
+      "...    .pipe(g, arg1=a)\n",
+      "...    .pipe(func, arg2=b, arg3=c)\n",
+      "... )  # doctest: +SKIP\n",
+      "\n",
+      "If you have a function that takes the data as (say) the second\n",
+      "argument, pass a tuple indicating which keyword expects the\n",
+      "data. For example, suppose ``func`` takes its data as ``arg2``:\n",
+      "\n",
+      ">>> (df.pipe(h)\n",
+      "...    .pipe(g, arg1=a)\n",
+      "...    .pipe((func, 'arg2'), arg1=a, arg3=c)\n",
+      "...  )  # doctest: +SKIP\n",
+      "\u001b[0;31mFile:\u001b[0m      ~/codes/Quantitative-Finance/env/lib/python3.11/site-packages/pandas/core/generic.py\n",
+      "\u001b[0;31mType:\u001b[0m      method"
+     ]
+    }
+   ],
+   "source": [
+    "raw.pipe?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Adj Close</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>Volume</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2010-01-04</th>\n",
+       "      <td>6.496294</td>\n",
+       "      <td>7.643214</td>\n",
+       "      <td>7.660714</td>\n",
+       "      <td>7.585000</td>\n",
+       "      <td>7.622500</td>\n",
+       "      <td>493729600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-01-05</th>\n",
+       "      <td>6.507526</td>\n",
+       "      <td>7.656429</td>\n",
+       "      <td>7.699643</td>\n",
+       "      <td>7.616071</td>\n",
+       "      <td>7.664286</td>\n",
+       "      <td>601904800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-01-06</th>\n",
+       "      <td>6.404016</td>\n",
+       "      <td>7.534643</td>\n",
+       "      <td>7.686786</td>\n",
+       "      <td>7.526786</td>\n",
+       "      <td>7.656429</td>\n",
+       "      <td>552160000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-01-07</th>\n",
+       "      <td>6.392175</td>\n",
+       "      <td>7.520714</td>\n",
+       "      <td>7.571429</td>\n",
+       "      <td>7.466071</td>\n",
+       "      <td>7.562500</td>\n",
+       "      <td>477131200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-01-08</th>\n",
+       "      <td>6.434672</td>\n",
+       "      <td>7.570714</td>\n",
+       "      <td>7.571429</td>\n",
+       "      <td>7.466429</td>\n",
+       "      <td>7.510714</td>\n",
+       "      <td>447610800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-06-23</th>\n",
+       "      <td>186.679993</td>\n",
+       "      <td>186.679993</td>\n",
+       "      <td>187.559998</td>\n",
+       "      <td>185.009995</td>\n",
+       "      <td>185.550003</td>\n",
+       "      <td>53079300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-06-26</th>\n",
+       "      <td>185.270004</td>\n",
+       "      <td>185.270004</td>\n",
+       "      <td>188.050003</td>\n",
+       "      <td>185.229996</td>\n",
+       "      <td>186.830002</td>\n",
+       "      <td>48088700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-06-27</th>\n",
+       "      <td>188.059998</td>\n",
+       "      <td>188.059998</td>\n",
+       "      <td>188.389999</td>\n",
+       "      <td>185.669998</td>\n",
+       "      <td>185.889999</td>\n",
+       "      <td>50730800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-06-28</th>\n",
+       "      <td>189.250000</td>\n",
+       "      <td>189.250000</td>\n",
+       "      <td>189.899994</td>\n",
+       "      <td>187.600006</td>\n",
+       "      <td>187.929993</td>\n",
+       "      <td>51216800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-06-29</th>\n",
+       "      <td>189.589996</td>\n",
+       "      <td>189.589996</td>\n",
+       "      <td>190.070007</td>\n",
+       "      <td>188.940002</td>\n",
+       "      <td>189.080002</td>\n",
+       "      <td>46347300</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3395 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Adj Close       Close        High         Low        Open  \\\n",
+       "Date                                                                     \n",
+       "2010-01-04    6.496294    7.643214    7.660714    7.585000    7.622500   \n",
+       "2010-01-05    6.507526    7.656429    7.699643    7.616071    7.664286   \n",
+       "2010-01-06    6.404016    7.534643    7.686786    7.526786    7.656429   \n",
+       "2010-01-07    6.392175    7.520714    7.571429    7.466071    7.562500   \n",
+       "2010-01-08    6.434672    7.570714    7.571429    7.466429    7.510714   \n",
+       "...                ...         ...         ...         ...         ...   \n",
+       "2023-06-23  186.679993  186.679993  187.559998  185.009995  185.550003   \n",
+       "2023-06-26  185.270004  185.270004  188.050003  185.229996  186.830002   \n",
+       "2023-06-27  188.059998  188.059998  188.389999  185.669998  185.889999   \n",
+       "2023-06-28  189.250000  189.250000  189.899994  187.600006  187.929993   \n",
+       "2023-06-29  189.589996  189.589996  190.070007  188.940002  189.080002   \n",
+       "\n",
+       "               Volume  \n",
+       "Date                   \n",
+       "2010-01-04  493729600  \n",
+       "2010-01-05  601904800  \n",
+       "2010-01-06  552160000  \n",
+       "2010-01-07  477131200  \n",
+       "2010-01-08  447610800  \n",
+       "...               ...  \n",
+       "2023-06-23   53079300  \n",
+       "2023-06-26   48088700  \n",
+       "2023-06-27   50730800  \n",
+       "2023-06-28   51216800  \n",
+       "2023-06-29   46347300  \n",
+       "\n",
+       "[3395 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def fix_cols(df):\n",
+    "    columns = df.columns\n",
+    "    outer = [col[0] for col in columns]\n",
+    "    df.columns = outer\n",
+    "    return df\n",
+    "\n",
+    "(raw\n",
+    "    .iloc[:, ::2]\n",
+    "    .pipe(fix_cols)\n",
+    ")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
